Bug-Fixed: Fixed navbar layout issue for smaller screen

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -468,6 +468,12 @@ h6 {
     }
 }
 
+@media (max-width: 310px) {
+    .nav-text-smaller {
+        font-size: x-small;
+    }
+}
+
 /* No padding for small screen topbar items */
 
 @media (max-width: 576px) {
